Change app name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mooovie_app
+name: gestao_app
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
