--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  shared_preferences: ^0.5.10
+  http: ^0.12.2
   cupertino_icons: ^0.1.3
   splashscreen: ^1.2.0
 
