--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^0.12.2
   cupertino_icons: ^0.1.3
   splashscreen: ^1.2.0
+  google_fonts: ^1.1.0
 
 dev_dependencies:
   flutter_test:
